bro stop committing

--- a/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1001,6 +1001,14 @@ SceneOutliner.TimeStamp=2021.09.23-09.03.58
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2021.09.23-09.03.44
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.09.23-09.03.44
+HierarchicalLODUtilities.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.09.23-09.04.09
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.09.23-09.03.51
+MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.09.23-09.03.43
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1057,7 +1065,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [Directories2]
-UNR=../../../../../Github/ToTheBeat/ToTheBeat/Content/
+UNR=../../../../../Github/ToTheBeat/ToTheBeat/Content/Maps
 BRUSH=../../../../../Github/ToTheBeat/ToTheBeat/Content/
 FBX=../../../../../Github/ToTheBeat/ToTheBeat/Content/
 FBXAnim=../../../../../Github/ToTheBeat/ToTheBeat/Content/
@@ -1067,7 +1075,7 @@ GenericOpen=../../../../../Github/ToTheBeat/ToTheBeat/Content/
 GenericSave=../../../../../Github/ToTheBeat/ToTheBeat/Content/
 MeshImportExport=../../../../../Github/ToTheBeat/ToTheBeat/Content/
 WorldRoot=../../../../../Github/ToTheBeat/ToTheBeat/Content/
-Level=../../../../../Github/ToTheBeat/ToTheBeat/Content/
+Level=../../../../../Github/ToTheBeat/ToTheBeat/Content/Maps
 Project=D:/Epic Games/UE_4.27/
 
 [DetailCategories]
