--- a/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/Level
 
 [ModuleFileTracking]
-ToTheBeat.TimeStamp=2021.12.21-12.41.02
+ToTheBeat.TimeStamp=2021.12.25-13.20.45
 ToTheBeat.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.09.23-09.03.54
 PakFile.LastCompileMethod=Unknown
@@ -1011,7 +1011,7 @@ ExternalImagePicker.TimeStamp=2021.09.23-09.03.43
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=154.400
@@ -1534,6 +1534,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/ToTheBeat.MusicBlock;
 
