--- a/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ToTheBeat/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -129,7 +129,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Maps/Level
 
 [ModuleFileTracking]
-ToTheBeat.TimeStamp=2021.12.25-13.20.45
+ToTheBeat.TimeStamp=2021.12.25-13.59.28
 ToTheBeat.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.09.23-09.03.54
 PakFile.LastCompileMethod=Unknown
@@ -1011,11 +1011,11 @@ ExternalImagePicker.TimeStamp=2021.09.23-09.03.43
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=154.400
-WindowSize=X=1284.800 Y=724.800
+ScreenPosition=X=240.000 Y=88.000
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1043,7 +1043,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/ToTheBeat
+ContentBrowserTab1.SelectedPaths=/Game/SongBeats
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1475,16 +1475,70 @@ PlayerPawn.Collision=True
 PlayerPawn.Input=True
 PlayerPawn.Actor=True
 PlayerPawn.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+MaterialExpressionTime.MaterialExpressionTime=True
+MaterialExpressionTime.MaterialExpression=True
+MaterialExpression.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Level
-MRUItem1=/Game/Blueprints/BPAc_MusicBlock
+MRUItem0=/Game/Materials/mi_SolidGreen
+MRUItem1=/Game/Materials/mi_SolidFuxia
+MRUItem2=/Game/Materials/MAT_SolidColor
+MRUItem3=/Game/Materials/MAT_BlinkingSolidColor
+MRUItem4=/Game/Materials/MAT_EmmissiveSolidColor
+MRUItem5=/Game/Materials/mi_EmissiveFuxia
+MRUItem6=/Game/Materials/mi_EmissiveGreen
+MRUItem7=/Game/Materials/MAT_Emmissive
+MRUItem8=/Game/Maps/Level
+MRUItem9=/Game/Blueprints/BPAc_MusicBlock
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BPAc_MusicBlock.BPAc_MusicBlock=1
+/Game/Materials/MAT_Emmissive.MAT_Emmissive=1
+/Game/Materials/MAT_EmmissiveSolidColor.MAT_EmmissiveSolidColor=1
+/Game/Materials/mi_EmissiveFuxia.mi_EmissiveFuxia=1
+/Game/Materials/mi_EmissiveGreen.mi_EmissiveGreen=1
+/Game/Materials/MAT_BlinkingSolidColor.MAT_BlinkingSolidColor=1
+/Game/Materials/MAT_SolidColor.MAT_SolidColor=1
+/Game/Materials/mi_SolidFuxia.mi_SolidFuxia=1
+/Game/Materials/mi_SolidGreen.mi_SolidGreen=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1534,6 +1588,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/mi_EmissiveFuxia.mi_EmissiveFuxia;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/ToTheBeat.MusicBlock;
@@ -1554,4 +1609,75 @@ BP_Sky_Sphere_C.Actor=True
 [DetailPropertyExpansion]
 Actor="\"Object.Actor.Tags\" "
 Object=
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,
+MaterialInstanceConstant=
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
 
