--- a/ToTheBeat/Config/DefaultEngine.ini
+++ b/ToTheBeat/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/Level.Level
 GlobalDefaultGameMode=/Script/ToTheBeat.ToTheBeatGameModeBase
 EditorStartupMap=/Game/Maps/Level.Level
+GameInstanceClass=/Script/ToTheBeat.ToTheBeatGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
