--- a/ToTheBeat/Config/DefaultEngine.ini
+++ b/ToTheBeat/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/Level.Level
-GlobalDefaultGameMode=/Script/ToTheBeat.ToTheBeatGameModeBase
+GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
 EditorStartupMap=/Game/Maps/Level.Level
 GameInstanceClass=/Script/ToTheBeat.ToTheBeatGameInstance
 
