--- a/ToTheBeat/Config/DefaultEngine.ini
+++ b/ToTheBeat/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Level.Level
+GameDefaultMap=/Game/Maps/StartScreen.StartScreen
 GlobalDefaultGameMode=/Game/Blueprints/BP_GameMode.BP_GameMode_C
-EditorStartupMap=/Game/Maps/Level.Level
+EditorStartupMap=/Game/Maps/StartScreen.StartScreen
 GameInstanceClass=/Script/ToTheBeat.ToTheBeatGameInstance
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
