--- a/ToTheBeat/Config/DefaultGame.ini
+++ b/ToTheBeat/Config/DefaultGame.ini
@@ -8,7 +8,7 @@ Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
 StagingDirectory=(Path="D:/Github/ToTheBeat/ToTheBeat/Build")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -72,4 +72,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
++MapsToCook=(FilePath="/Game/Maps/StartScreen")
++MapsToCook=(FilePath="/Game/Maps/InstructionScreen")
++MapsToCook=(FilePath="/Game/Maps/Level")
++MapsToCook=(FilePath="/Game/Maps/EndScreen")
 
