--- a/ToTheBeat/Config/DefaultGame.ini
+++ b/ToTheBeat/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ BuildTarget=
 StagingDirectory=(Path="D:/Github/ToTheBeat/ToTheBeat/Build")
 FullRebuild=True
 ForDistribution=False
-IncludeDebugFiles=False
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
@@ -29,7 +29,7 @@ PakFileCompressionFormats=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
 PakFileAdditionalCompressionOptions=-compressionblocksize=256KB
 PakFileCompressionMethod=Kraken
-PakFileCompressionLevel_DebugDevelopment=3
+PakFileCompressionLevel_DebugDevelopment=10
 PakFileCompressionLevel_TestShipping=5
 PakFileCompressionLevel_Distribution=7
 HttpChunkInstallDataVersion=
